kubernetes/web.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fscweb-depoyment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: fscweb
        tier: frontend
        micro: web-bff
    spec:
      containers:
      - name: fscweb
        image: registry.ng.bluemix.net/fsc_cloudnative/fscweb:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fscweb
  labels:
    app: fscweb
    tier: frontend
    micro: web-bff
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    app: fscweb
    tier: frontend
    micro: web-bff
...
