kubernetes/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bluecompute-web
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        backend:
          serviceName: fscweb
          servicePort: 80
